# spatial-benchmarker

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
benchmarks/: 1.data.csv  1.queries.csv  1.results.csv  4.queries.csv  4.results.csv  b1.csv
benchmarks/manual/: README.md  data.csv
benchmarks/sortbyid/: README.md  data.csv
scripts/: averages.py  benchmark  benchmark.py  compare.py  compile_for.py  configs.py  database.py  generate.sh  make_table.py  mkresults  optimize.py  plot  plot.py  reporters.py  runtime-to-speedup.py  stdev.py  tasks.py
src/: AxisAlignedBox.cpp  AxisAlignedBox.hpp  Benchmark.cpp  DataObject.cpp  KnnQuery.cpp  KnnQuery.hpp  NaiveSpatialIndex.cpp  NaiveSpatialIndex.hpp  ParallelSpatialIndex.cpp  ParallelSpatialIndex.hpp  Point.cpp  Point.hpp  Query.cpp  RangeQuery.cpp  RtreeSpatialIndex.cpp  RtreeSpatialIndex.hpp  SpatialIndex.cpp  SpatialIndex.hpp  SpatialIndexFactory.cpp  SpatialIndexFactory.hpp  Timer.cpp  Timer.hpp  hilbert.cpp  hilbert.hpp  main.cpp
src/bench/: AlgorithmArg.cpp  AlgorithmArg.hpp  Benchmark.cpp  Benchmark.hpp  BoxInputIterator.cpp  BoxInputIterator.hpp  Color.hpp  DataObjectInputIterator.cpp  DataObjectInputIterator.hpp  DataSet.cpp  DataSet.hpp  DynamicObject.hpp  FileSet.hpp  IndexArg.cpp  IndexArg.hpp  InvalidStructureError.hpp  LazyDataSet.cpp  LazyDataSet.hpp  LazyQuerySet.hpp  Logger.cpp  Logger.hpp  NaiveSpatialIndex.cpp  NaiveSpatialIndex.hpp  ParallelSpatialIndex.cpp  ParallelSpatialIndex.hpp  QueryInputIterator.cpp  QueryInputIterator.hpp  ReporterArg.cpp  ReporterArg.hpp  SpatialIndex.cpp  SpatialIndex.hpp  SpatialIndexFactory.cpp  SpatialIndexFactory.hpp  StatsCollector.hpp  Zipped.hpp  main.cpp
src/bench/indexes/: ParallelSpatialIndex.cpp  ParallelSpatialIndex.hpp
src/bench/indexes/naive/: SpatialIndex.cpp  SpatialIndex.hpp
src/bench/indexes/parallel/: SpatialIndex.cpp  SpatialIndex.hpp
src/bench/indexes/rtree/: Entry.hpp  GreeneInsertStrategy.hpp  GreeneTree.hpp  HilbertCurve.hpp  HilbertCurve.test.cpp  HilbertEntry.hpp  HilbertRtree.hpp  KnnQueueEntry.hpp  Mbr.hpp  Mbr.test.cpp  Node.hpp  QuadraticInsertStrategy.hpp  QuadraticTree.hpp  RRStarInsertStrategy.hpp  RRStarTree.hpp  RStarInsertStrategy.hpp  RStarTree.hpp  RevisedNode.hpp  Rtree.hpp  SpatialIndex.hpp  WeightingFunction.hpp
src/bench/indexes/sequential/: SpatialIndex.cpp  SpatialIndex.hpp
src/bench/indexes/vectorized/: SpatialIndex.cpp  SpatialIndex.hpp
src/bench/reporters/: AvgStatsReporter.cpp  AvgStatsReporter.hpp  CorrectnessReporter.cpp  CorrectnessReporter.hpp  FileHeader.cpp  FileHeader.hpp  MetricReporter.cpp  MetricReporter.hpp  PapiReporter.cpp  PapiReporter.hpp  PerfReporter.cpp  PerfReporter.hpp  ProgressLogger.cpp  ProgressLogger.hpp  QueryReporter.cpp  QueryReporter.hpp  QueryRunTimeReporter.cpp  QueryRunTimeReporter.hpp  Reporter.cpp  Reporter.hpp  ReporterFactory.cpp  ReporterFactory.hpp  ResultSet.cpp  ResultSet.hpp  ResultsReporter.cpp  ResultsReporter.hpp  RunTimeReporter.cpp  RunTimeReporter.hpp  SpeedupReporter.cpp  SpeedupReporter.hpp  StatsReporter.cpp  StatsReporter.hpp  StructReporter.cpp  StructReporter.hpp  TotalRunTimeReporter.cpp  TotalRunTimeReporter.hpp
src/bench/rtree/: Entry.hpp  KnnQueueEntry.hpp  KnnQueueEntry.test.cpp  Mbr.hpp  Mbr.test.cpp  Node.hpp  SpatialIndex.hpp
src/common/: Algorithm.hpp  AxisAlignedBox.cpp  AxisAlignedBox.hpp  AxisAlignedBox.test.cpp  Benchmark.cpp  Benchmark.hpp  Box.cpp  Box.hpp  Box.test.cpp  Color.hpp  Coordinate.hpp  DataObject.cpp  DataObject.hpp  DataSet.cpp  DataSet.hpp  FileHeader.cpp  FileHeader.hpp  KnnQuery.cpp  KnnQuery.hpp  Logger.cpp  Logger.hpp  Point.cpp  Point.hpp  Point.test.cpp  ProgressLogger.cpp  ProgressLogger.hpp  Query.hpp  QuerySet.cpp  QuerySet.hpp  RangeQuery.cpp  RangeQuery.hpp  ResultSet.cpp  ResultSet.hpp  Results.cpp  Results.hpp  SpatialIndex.cpp  SpatialIndex.hpp
src/indexes/: Makefile  configuration.hpp.in  interface.hpp  naive.cpp  parallel.cpp  rtree-greene.cpp  rtree-hilbert.cpp  rtree-pointer-array.cpp  rtree-rstar.cpp  rtree-star.cpp  rtree.cpp  sequential.cpp  vectorized.cpp
src/indexes/naive/: SpatialIndex.cpp  SpatialIndex.hpp
src/indexes/parallel/: SpatialIndex.cpp
src/indexes/rtree/: Algorithm.hpp  BaseNode.hpp  BasicRtree.hpp  CapturingEntryPlugin.hpp  CheckComp.hpp  CheckComp.test.cpp  CombinationsView.hpp  CombinationsView.test.cpp  CoveringSet.hpp  DefaultNode.hpp  Entry.hpp  EntryPlugin.hpp  FullScanNode.hpp  FullScanNode.test.cpp  GoalFunction.hpp  GoalFunction.test.cpp  GreeneRtree.hpp  GreeneTree.hpp  HilbertCurve.hpp  HilbertCurve.test.cpp  HilbertEntry.hpp  HilbertEntryPlugin.hpp  HilbertRtree.hpp  KnnQueueEntry.hpp  KnnQueueEntry.test.cpp  Link.hpp  Mbr.hpp  Mbr.test.cpp  Node.hpp  Node.test.hpp  PointerArrayNode.hpp  ProxyEntry.hpp  ProxyIterator.hpp  ProxyScanIterator.hpp  PruningNode.hpp  PruningNode.test.cpp  QuadraticRtree.hpp  QuadraticSeeds.hpp  QuadraticSeeds.test.cpp  QuadraticTree.hpp  (+17 more)
src/indexes/scanning/: Parallel.cpp  Parallel.hpp  Scanning.cpp  Scanning.hpp  Sequential.cpp  Sequential.hpp
src/indexes/sequential/: SpatialIndex.cpp
src/indexes/vectorized/: SpatialIndex.cpp  SpatialIndex.hpp
src/mkbench/: DistributionFactory.hpp  main.cpp
src/mkdata/: DataSet.cpp  DataSet.hpp  main.cpp
src/mkqueries/: main.cpp
src/mmap/: CacheLineIterator.cpp  CacheLineIterator.hpp  MemoryMap.cpp  MemoryMap.hpp  MemoryRegion.cpp  MemoryRegion.hpp
src/spatial/: Box.cpp  Box.hpp  Box.test.cpp  Coordinate.hpp  DataObject.cpp  DataObject.hpp  InvalidStructureError.hpp  KnnQuery.cpp  KnnQuery.hpp  Point.cpp  Point.hpp  Point.test.cpp  Query.cpp  Query.hpp  README.md  RangeQuery.cpp  RangeQuery.hpp  Results.cpp  Results.hpp  SpatialIndex.cpp  SpatialIndex.hpp  StatsCollector.hpp
